Update pricing plans and contact information in index.html

--- a/index.html
+++ b/index.html
@@ -101,15 +101,16 @@
                         <h3>Personal</h3>
                         <div class="price">
                             <span class="currency">$</span>
-                            <span class="amount">299</span>
-                            <span class="period">USD</span>
+                            <span class="amount">250.000</span>
+                            <span class="period">CLP</span>
                         </div>
                     </div>
                     <ul class="features">
-                        <li><i class="fas fa-check"></i> Sitio web de 1-3 páginas</li>
+                        <li><i class="fas fa-check"></i> Sitio web de 1-2 páginas</li>
                         <li><i class="fas fa-check"></i> Diseño responsive</li>
                         <li><i class="fas fa-check"></i> Formulario de contacto</li>
                         <li><i class="fas fa-check"></i> Optimización SEO básica</li>
+                        <li><i class="fas fa-check"></i> Dominio 1 año incluido</li>
                         <li><i class="fas fa-check"></i> Hosting 1 año incluido</li>
                         <li><i class="fas fa-check"></i> 2 revisiones</li>
                     </ul>
@@ -122,43 +123,21 @@
                         <h3>PYME</h3>
                         <div class="price">
                             <span class="currency">$</span>
-                            <span class="amount">799</span>
-                            <span class="period">USD</span>
+                            <span class="amount">500.000</span>
+                            <span class="period">CLP</span>
                         </div>
                         <div class="badge">Más Popular</div>
                     </div>
                     <ul class="features">
-                        <li><i class="fas fa-check"></i> Sitio web de 5-8 páginas</li>
-                        <li><i class="fas fa-check"></i> Diseño personalizado</li>
-                        <li><i class="fas fa-check"></i> Sistema de citas/reservas</li>
-                        <li><i class="fas fa-check"></i> Integración redes sociales</li>
-                        <li><i class="fas fa-check"></i> Blog integrado</li>
-                        <li><i class="fas fa-check"></i> Analytics avanzados</li>
-                        <li><i class="fas fa-check"></i> 5 revisiones</li>
+                        <li><i class="fas fa-check"></i> Sitio web de 1-4 páginas</li>
+                        <li><i class="fas fa-check"></i> Diseño responsive</li>
+                        <li><i class="fas fa-check"></i> Formulario de contacto</li>
+                        <li><i class="fas fa-check"></i> Optimización SEO básica</li>
+                        <li><i class="fas fa-check"></i> Dominio 1 año incluido</li>
+                        <li><i class="fas fa-check"></i> Hosting 1 año incluido</li>
+                        <li><i class="fas fa-check"></i> 1 revisión mensual</li>
                     </ul>
                     <button class="btn btn-primary">Elegir Plan</button>
-                </div>
-
-                <!-- Plan Empresa -->
-                <div class="pricing-card">
-                    <div class="pricing-header">
-                        <h3>Empresa</h3>
-                        <div class="price">
-                            <span class="currency">$</span>
-                            <span class="amount">1899</span>
-                            <span class="period">USD</span>
-                        </div>
-                    </div>
-                    <ul class="features">
-                        <li><i class="fas fa-check"></i> Sitio web ilimitado</li>
-                        <li><i class="fas fa-check"></i> E-commerce completo</li>
-                        <li><i class="fas fa-check"></i> Panel de administración</li>
-                        <li><i class="fas fa-check"></i> Integración CRM</li>
-                        <li><i class="fas fa-check"></i> Múltiples idiomas</li>
-                        <li><i class="fas fa-check"></i> Soporte 24/7</li>
-                        <li><i class="fas fa-check"></i> Revisiones ilimitadas</li>
-                    </ul>
-                    <button class="btn btn-outline">Elegir Plan</button>
                 </div>
             </div>
         </div>
@@ -175,15 +154,15 @@
                     <div class="contact-methods">
                         <div class="contact-method">
                             <i class="fas fa-envelope"></i>
-                            <span>info@bunstack.com</span>
+                            <span>contacto@bunstack.cl</span>
                         </div>
                         <div class="contact-method">
                             <i class="fas fa-phone"></i>
-                            <span>+1 (555) 123-4567</span>
+                            <span>+569 4206 2593</span>
                         </div>
                         <div class="contact-method">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Ciudad de México, México</span>
+                            <span>Chile</span>
                         </div>
                     </div>
                 </div>
@@ -199,7 +178,6 @@
                             <option value="">Tipo de proyecto</option>
                             <option value="personal">Personal</option>
                             <option value="pyme">PYME</option>
-                            <option value="empresa">Empresa</option>
                         </select>
                     </div>
                     <div class="form-group">
