--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>BUNSTACK</h2>
+                <img src="logo.svg" alt="BUNSTACK - Desarrollo Web" class="logo">
             </div>
             <ul class="nav-menu">
                 <li><a href="#inicio">Inicio</a></li>
@@ -194,7 +194,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h3>BUNSTACK</h3>
+                    <img src="logo.svg" alt="BUNSTACK" class="footer-logo-img">
                     <p>Desarrollo web del futuro</p>
                 </div>
                 <div class="footer-links">
