--- a/index.html
+++ b/index.html
@@ -170,22 +170,28 @@
                         </div>
                     </div>
                 </div>
-                <form class="contact-form">
+                <form class="contact-form" action="https://formsubmit.co/benjamin.bunster@gmail.com" method="POST">
+                    <!-- FormSubmit Configuration -->
+                    <input type="hidden" name="_subject" value="Nueva consulta desde BUNSTACK">
+                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_template" value="table">
+                    <input type="hidden" name="_next" value="https://bunstack.vercel.app/#contacto">
+                    
                     <div class="form-group">
-                        <input type="text" placeholder="Nombre completo" required>
+                        <input type="text" name="name" placeholder="Nombre completo" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" placeholder="Correo electrónico" required>
+                        <input type="email" name="email" placeholder="Correo electrónico" required>
                     </div>
                     <div class="form-group">
-                        <select required>
+                        <select name="project_type" required>
                             <option value="">Tipo de proyecto</option>
                             <option value="personal">Personal</option>
                             <option value="pyme">PYME</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <textarea placeholder="Describe tu proyecto" rows="4"></textarea>
+                        <textarea name="message" placeholder="Describe tu proyecto" rows="4" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Enviar Consulta</button>
                 </form>
