--- a/index.html
+++ b/index.html
@@ -50,16 +50,24 @@
             </div>
             <div class="hero-visual">
                 <div class="floating-card">
-                    <i class="fas fa-code"></i>
+                    <i class="fas fa-file-code" data-fallback="💻"></i>
                     <h3>Código Limpio</h3>
                 </div>
                 <div class="floating-card">
-                    <i class="fas fa-mobile-alt"></i>
+                    <i class="fas fa-expand-arrows-alt" data-fallback="📱"></i>
                     <h3>Responsive</h3>
                 </div>
                 <div class="floating-card">
-                    <i class="fas fa-rocket"></i>
+                    <i class="fas fa-bolt" data-fallback="⚡"></i>
                     <h3>Ultra Rápido</h3>
+                </div>
+                <div class="floating-card">
+                    <i class="fas fa-shield-alt" data-fallback="🛡️"></i>
+                    <h3>Seguro</h3>
+                </div>
+                <div class="floating-card">
+                    <i class="fab fa-js-square" data-fallback="⚡"></i>
+                    <h3>JavaScript</h3>
                 </div>
             </div>
         </div>
